<resources>
    <string name="app_name">Final Project</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masukkan_username">Masukkan Email</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="buat_password">Buat Password</string>
    <string name="masuk">Masuk</string>
    <string name="halo_selamat_datang_di_home">Selamat datang di Home</string>
    <string name="kembali">Kembali</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="pendaftaran">Silahkan Daftar</string>
    <string name="lengkapi_data_diri">Lengkapi data diri</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="mulai">Mulai</string>

    <string name="item_label">Jenis Kelamin</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="value">:</string>
    <string name="sample">Sample</string>
    <string name="nomor_hp">Nomor Hp</string>
</resources>