<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/main_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/josefin_medium"
        android:textStyle="bold"
        android:textSize="@dimen/_24ssp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp">



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_username"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/josefin_medium"
            android:inputType="text"
            android:drawableEnd="@drawable/username"
            android:drawableTint="@color/icon"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_10sdp" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="@dimen/_45sdp"
        app:passwordToggleEnabled="true" >



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_password"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/josefin_medium"
            android:inputType="textPassword"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>



    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp" />

    <Button
        android:id="@+id/button_masuk"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_16ssp"
        android:text="@string/masuk"
        android:fontFamily="@font/josefin_medium"
        android:backgroundTint="@color/main_button"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>
